--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-  useEffect(() => {
-    axios
-      .get(config.url.API_URL + "GetResponseHeader")
-      .then((r) => {
-        const { first, last } = r.data;
-        setName({
-          first: first || "NULL",
-          last: last || "NULL"
-        });
-      })
-      .catch(() => setName({ first: "NULL", last: "NULL" }));
-  }, []);
+<Button
+            onClick={handleLookerMenu}
+            endIcon={<ArrowDropDownIcon />}
+            sx={{
+              fontWeight: 700,
+              textTransform: 'none',
+              color: 'text.primary',
+              px: 2,
+              fontSize: 16,
+              borderBottom: '2px solid transparent',
+              '&:hover': {
+                borderBottom: '2px solid',
+                borderColor: 'primary.main',
+                background: 'none',
+              },
+            }}
+          >
