--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,7 @@
           </Button>
           <Button
             onClick={handleLookerMenu}
-            endIcon={
-              <Box sx={{ display: 'flex', alignItems: 'center', gap: 0.5 }}>
-                <ArrowDropDownIcon />
-                <LinkIcon sx={{ fontSize: 18, ml: 0.5, color: "primary.main" }} />
-              </Box>
-            }
+            endIcon={<ArrowDropDownIcon />}
             sx={{
               fontWeight: 700,
               textTransform: 'none',
@@ -79,12 +74,16 @@
               sx={{
                 fontWeight: 500,
                 fontSize: 15,
+                display: 'flex',
+                justifyContent: 'space-between',
+                alignItems: 'center',
                 '&:hover': {
                   backgroundColor: '#f5f5f5',
                 }
               }}
             >
-              Link 1
+              <span>Link 1</span>
+              <LinkIcon fontSize="small" sx={{ ml: 2, color: 'primary.main' }} />
             </MenuItem>
             <MenuItem
               onClick={handleLookerClose}
@@ -95,12 +94,16 @@
               sx={{
                 fontWeight: 500,
                 fontSize: 15,
+                display: 'flex',
+                justifyContent: 'space-between',
+                alignItems: 'center',
                 '&:hover': {
                   backgroundColor: '#f5f5f5',
                 }
               }}
             >
-              Link 2
+              <span>Link 2</span>
+              <LinkIcon fontSize="small" sx={{ ml: 2, color: 'primary.main' }} />
             </MenuItem>
           </Menu>
         </Box>
