--- a/.gitignore
+++ b/.gitignore
@@ -64,8 +64,7 @@ const ReportForm = () => {
       elevation={3}
       sx={{
         p: { xs: 2, sm: 4 },
-        width: "90%",
-        maxWidth: 700,
+        width: "100%",
         mx: "auto",
         my: 6,
         borderRadius: 3,
@@ -77,8 +76,13 @@ const ReportForm = () => {
       </Typography>
       <Box component="form" autoComplete="off" onSubmit={handleSave} sx={{ mt: 2 }}>
         {/* Filter Row */}
-        <Grid container spacing={2} alignItems="center">
-          <Grid item xs={12} sm={4}>
+        <Grid
+          container
+          spacing={3}  // bigger spacing between filter fields
+          alignItems="center"
+          sx={{ mb: 2 }}
+        >
+          <Grid item xs={12} md={4}>
             <TextField
               select
               label="Report Quarter"
@@ -87,13 +91,14 @@ const ReportForm = () => {
               onChange={handleChange}
               fullWidth
               required
+              size="medium"
             >
               {quarters.map(q => (
                 <MenuItem key={q} value={q}>{q}</MenuItem>
               ))}
             </TextField>
           </Grid>
-          <Grid item xs={12} sm={4}>
+          <Grid item xs={12} md={4}>
             <TextField
               select
               label="Vendor"
@@ -102,13 +107,14 @@ const ReportForm = () => {
               onChange={handleChange}
               fullWidth
               required
+              size="medium"
             >
               {vendors.map(v => (
                 <MenuItem key={v.name} value={v.name}>{v.name}</MenuItem>
               ))}
             </TextField>
           </Grid>
-          <Grid item xs={12} sm={4}>
+          <Grid item xs={12} md={4}>
             <TextField
               label="PCM ID"
               name="pcm"
@@ -116,13 +122,14 @@ const ReportForm = () => {
               InputProps={{ readOnly: true }}
               fullWidth
               required
+              size="medium"
             />
           </Grid>
         </Grid>
 
         {/* Risk Area - its own row */}
-        <Grid container spacing={2} sx={{ mt: 2 }}>
-          <Grid item xs={12}>
+        <Grid container spacing={0} sx={{ mb: 2 }}>
+          <Grid item xs={12} md={8}>
             <TextField
               select
               label="Risk Area"
@@ -131,6 +138,7 @@ const ReportForm = () => {
               onChange={handleChange}
               fullWidth
               required
+              size="medium"
             >
               {riskAreas.map(area => (
                 <MenuItem key={area} value={area}>{area}</MenuItem>
